--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,7 @@ Package: riskdiff
 Title: Exact distribution of risk differences
 Version: 0.0.0.9000
 Authors@R: 
-    person("Morten", "Dreher", , "morten.dreher@outlook.de", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
+    person("Morten", "Dreher", , "morten.dreher@outlook.de", role = c("aut", "cre"))
 Description: Provides functions for exact distribution of risk differences.
 License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
     license
@@ -11,5 +10,8 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.1
 Suggests: 
+    knitr,
+    rmarkdown,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+VignetteBuilder: knitr
