--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,11 +4,11 @@ Version: 0.0.0.9000
 Authors@R: 
     person("Morten", "Dreher", , "morten.dreher@outlook.de", role = c("aut", "cre"))
 Description: Provides functions for exact distribution of risk differences.
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.1
+Imports: ggplot2
+RoxygenNote: 7.3.2
 Suggests: 
     knitr,
     rmarkdown,
