--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Description: Provides functions for exact distribution of risk differences.
 License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-Imports: ggplot2
+Imports: ggplot2, rpact
 RoxygenNote: 7.3.2
 Suggests: 
     knitr,
